--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,25 +1,3 @@
-<!--<mat-card>-->
-<!--  <mat-card-title>Login</mat-card-title>-->
-<!--  <mat-card-content fxLayout="column" fxLayoutAlign="space-around center">-->
-<!--    <mat-form-field>-->
-<!--      <mat-label>Email</mat-label>-->
-<!--      <input matInput type="email">-->
-<!--    </mat-form-field>-->
-
-<!--    <mat-form-field>-->
-<!--      <mat-label>Password</mat-label>-->
-<!--      <input matInput type="password">-->
-<!--    </mat-form-field>-->
-
-<!--  </mat-card-content>-->
-<!--  <mat-card-actions>-->
-<!--    <div>-->
-<!--      <button mat-raised-button>Login</button>-->
-<!--      <button (click)="loginWithGoogle()" mat-raised-button class="google-login-btn">Google</button>-->
-<!--    </div>-->
-<!--  </mat-card-actions>-->
-<!--</mat-card>-->
-
 <div class="login">
   <form [formGroup]="loginForm" class="col-8 col-md-4">
     <div class="form-group">
@@ -46,7 +24,7 @@
     <mat-card-actions>
       <div>
         <button mat-raised-button>Login</button>
-        <button (click)="loginWithGoogle()" mat-raised-button class="google-login-btn">Google</button>
+        <button (click)="loginWithGoogle()" mat-raised-button class="google-login-btn googleBtn">Google</button>
       </div>
     </mat-card-actions>
   </form>
