user page component added (menu and user to do)

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,6 +1,6 @@
 <div class="footer">
   <h5>
-    kaxa bendukiZis sauniversiteto kampusi, Tbilisi, aRmaSeneblis xeivani # 240
+    kaxa benduqiZis sauniversiteto kampusi, Tbilisi, aRmaSeneblis xeivani # 240
 <!--    კახა ბენდუქიძის საუნივერსიტეტო კამპუსი, თბილისი, აღმაშენებლის ხეივანი # 240-->
   </h5>
   <div class="footer-right">
