--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,11 +1,10 @@
 <header class="header">
     <img src="../../assets/images/freeuni-transparent.png">
     <h1>
-<!--      თავისუფალი უნივერსიტეტი-->
       Tavisufali universiteti
     </h1>
     <div class="header-right">
-
+      <a href="/userpage">Cemi gverdi</a>
     </div>
 
 
