--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -1,5 +1,9 @@
 $background-color: #ffc87c;
 
+* {
+  font-family: 'avaza';
+}
+
 img {
     width: 50px;
     height: 50px;
@@ -11,7 +15,6 @@ img {
     padding: 20px 10px;
     margin: 0 auto;
     display: block;
-    
 }
 
 .header h1 {
@@ -26,8 +29,42 @@ img {
 .header-right {
     float: right;
     padding-right: 5%;
+    font-size: 20px;
+    display: inline;
+    padding-top: 25px;
+    color: black;
 }
 
 .btn {
     margin: 10px;
+}
+
+a {
+  border-radius: 8px;
+  padding: 15px;
+  color: black;
+  text-decoration: none;
+}
+
+a:hover {
+  background-color: #ffc40c;
+}
+
+
+@media only screen and (max-width: 600px) {
+  img {
+    width: 25px;
+    height: 25px;
+  }
+  .header h1 {
+    font-size: 15px;
+  }
+
+  .header-right {
+    font-size: 10px;
+  }
+
+  .header {
+    padding: 5px 5px;
+  }
 }
