navigation added in header and some other fixes

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,10 +1,11 @@
 <header class="header">
-    <img src="../../assets/images/freeuni-transparent.png">
+    <a href="/mainpage"><img src="../../assets/images/freeuni-transparent.png"></a>
     <h1>
       Tavisufali universiteti
     </h1>
     <div class="header-right">
-      <a href="/userpage">Cemi gverdi</a>
+      <a class="navigation" href="/mainpage">mTavari gverdi</a>
+      <a class="navigation" href="/userpage">Cemi gverdi</a>
     </div>
 
 
