--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -29,7 +29,7 @@ img {
 .header-right {
     float: right;
     padding-right: 5%;
-    font-size: 20px;
+    font-size: 15px;
     display: inline;
     padding-top: 25px;
     color: black;
@@ -39,14 +39,14 @@ img {
     margin: 10px;
 }
 
-a {
+.navigation {
   border-radius: 8px;
   padding: 15px;
   color: black;
   text-decoration: none;
 }
 
-a:hover {
+.navigation:hover {
   background-color: #ffc40c;
 }
 
