--- a/src/app/user-page/user-page.component.html
+++ b/src/app/user-page/user-page.component.html
@@ -1,1 +1,15 @@
-<p>user-page works!</p>
+<mat-tab-group>
+  <mat-tab label="მომხმარებლის ინფორმაცია">
+    <div *ngIf="userInfo">
+      <img src="{{userInfo.photoUrl}}">
+    </div>
+  </mat-tab>
+  <mat-tab label="დაჯავშნილი/გატანილი წიგნები">
+
+  </mat-tab>
+  <mat-tab label="შენახული წიგნები">
+
+  </mat-tab>
+</mat-tab-group>
+
+
