authorization v1 and toastr service done

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -5,7 +5,7 @@
     </h1>
     <div class="header-right">
       <a class="navigation" href="/mainpage">mTavari gverdi</a>
-      <a class="navigation" href="/userpage">Cemi gverdi</a>
+      <a *ngIf="isUser" class="navigation" href="/userpage">Cemi gverdi</a>
     </div>
 
 
