update local storage changes immediately (not done)

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -6,6 +6,7 @@
     <div class="header-right">
       <a class="navigation" href="/mainpage">mTavari gverdi</a>
       <a *ngIf="isUser" class="navigation" href="/userpage">Cemi gverdi</a>
+      <a *ngIf="isAdmin" class="navigation" href="/adminpage">adminis gverdi</a>
     </div>
 
 
