update header on user changes done :)

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -5,8 +5,8 @@
     </h1>
     <div class="header-right">
       <a class="navigation" href="/mainpage">mTavari gverdi</a>
-      <a *ngIf="isUser" class="navigation" href="/userpage">Cemi gverdi</a>
-      <a *ngIf="isAdmin" class="navigation" href="/adminpage">adminis gverdi</a>
+      <a *ngIf="user$ | async" class="navigation" href="/userpage">Cemi gverdi</a>
+      <a *ngIf="admin$ | async" class="navigation" href="/adminpage">adminis gverdi</a>
     </div>
 
 
