--- a/src/app/admin-page/admin-page.component.html
+++ b/src/app/admin-page/admin-page.component.html
@@ -1,1 +1,43 @@
-<p>admin-page works!</p>
+<mat-tab-group>
+  <mat-tab label="მომხმარებლები">
+    <div class="add-button">
+      <button mat-fab aria-label="ახალი ადმინ მომხმარებლის შექმნა" (click)="createNewUser()">
+        <mat-icon>add</mat-icon>
+      </button>
+    </div>
+    <div class="mat-elevation-z8">
+      <table mat-table [dataSource]="dataSource">
+        <ng-container matColumnDef="firstName">
+          <th mat-header-cell *matHeaderCellDef> სახელი </th>
+          <td mat-cell *matCellDef="let element"> {{element.firstName ? element.firstName : '' }} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="lastName">
+          <th mat-header-cell *matHeaderCellDef> გვარი </th>
+          <td mat-cell *matCellDef="let element"> {{element.lastName ? element.lastName : ''}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="personalNo">
+          <th mat-header-cell *matHeaderCellDef> პირადი ნომერი </th>
+          <td mat-cell *matCellDef="let element"> {{element.personalNo ? element.personalNo : ''}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="email">
+          <th mat-header-cell *matHeaderCellDef> მეილი </th>
+          <td mat-cell *matCellDef="let element"> {{element.email.trim() ? element.email.trim() : ''}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="createDate">
+          <th mat-header-cell *matHeaderCellDef> შექმნის თარიღი </th>
+          <td mat-cell *matCellDef="let element"> {{element.createDate ? element.createDate : ''}} </td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+      </table>
+
+      <mat-paginator [length]="dataSource.data.length" [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
+    </div>
+  </mat-tab>
+
+</mat-tab-group>
