admin panel: setting (genres added)

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,6 +2,7 @@
 @import "~bootstrap/dist/css/bootstrap.css";
 @import "assets/styles/toastr.css";
 @import "./assets/styles/functions.scss";
+@import "assets/styles/global";
 
 @font-face {
   font-family: avaza;
