--- a/src/app/admin-page/admin-page.component.html
+++ b/src/app/admin-page/admin-page.component.html
@@ -1,12 +1,12 @@
 <mat-tab-group>
   <mat-tab label="მომხმარებლები">
     <div class="add-button">
-      <button mat-fab aria-label="ახალი ადმინ მომხმარებლის შექმნა" (click)="createNewUser()">
+      <button class="add-btn" mat-fab aria-label="ახალი ადმინ მომხმარებლის შექმნა" (click)="createNewUser()">
         <mat-icon>add</mat-icon>
       </button>
     </div>
     <div class="mat-elevation-z8">
-      <table mat-table [dataSource]="dataSource">
+      <table mat-table [dataSource]="usersDataSource">
         <ng-container matColumnDef="firstName">
           <th mat-header-cell *matHeaderCellDef> სახელი </th>
           <td mat-cell *matCellDef="let element"> {{element.firstName ? element.firstName : '' }} </td>
@@ -32,12 +32,54 @@
           <td mat-cell *matCellDef="let element"> {{element.createDate ? element.createDate : ''}} </td>
         </ng-container>
 
-        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+        <tr mat-header-row *matHeaderRowDef="usersDisplayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: usersDisplayedColumns;"></tr>
       </table>
 
-      <mat-paginator [length]="dataSource.data.length" [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
+      <mat-paginator [length]="usersDataSource.data.length" [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
     </div>
   </mat-tab>
+  <mat-tab label="პარამეტრები">
+    <mat-accordion>
+      <mat-expansion-panel (opened)="genresOpenState = true"
+                           (closed)="genresOpenState = false">
+        <mat-expansion-panel-header>
+          <mat-panel-title class="panel-title">
+            საგნობრივი რუბრიკის დამატება / რედაქტირება
+            <button mat-mini-fab class="my-fab" (click)="addRubric()">
+              <mat-icon>add</mat-icon>
+            </button>
+          </mat-panel-title>
+        </mat-expansion-panel-header>
+        <div class="mat-elevation-z8">
+          <table mat-table [dataSource]="rubricsDataSource">
+            <ng-container matColumnDef="id">
+              <th mat-header-cell *matHeaderCellDef> აიდი </th>
+              <td mat-cell *matCellDef="let element"> {{element.id ? element.id : '' }} </td>
+            </ng-container>
 
+            <ng-container matColumnDef="name">
+              <th mat-header-cell *matHeaderCellDef> დასახელება </th>
+              <td mat-cell *matCellDef="let element"> {{element.name ? element.name : ''}} </td>
+            </ng-container>
+
+            <ng-container matColumnDef="actions">
+              <th mat-header-cell *matHeaderCellDef> რედაქტირება </th>
+              <td mat-cell *matCellDef="let element">
+                <button mat-mini-fab class="my-fab" (click)="editRubric(element)">
+                  <mat-icon>edit</mat-icon>
+                </button>
+              </td>
+            </ng-container>
+
+            <tr mat-header-row *matHeaderRowDef="rubricDisplayedColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: rubricDisplayedColumns;"></tr>
+          </table>
+
+          <mat-paginator [length]="rubricsDataSource.data.length" [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
+        </div>
+      </mat-expansion-panel>
+      <mat-divider></mat-divider>
+    </mat-accordion>
+  </mat-tab>
 </mat-tab-group>
