--- a/src/app/admin-page/admin-page.component.scss
+++ b/src/app/admin-page/admin-page.component.scss
@@ -12,7 +12,7 @@ table {
   margin-right: pxToRem(200);
 }
 
-button {
+.add-btn {
   float: right;
 }
 
@@ -22,4 +22,56 @@ mat-icon {
 
 .mat-flat-button .mat-accent, .mat-raised-button.mat-accent, .mat-fab.mat-accent, .mat-mini-fab.mat-accent {
   background-color: #ffc87c;
+}
+
+.bordered {
+  border: 1px solid rgba(0, 0, 0, 0.12);
+}
+
+.rounded {
+  border-radius: 10px;
+  overflow: hidden;
+}
+
+.drawer {
+  min-width: 200px;
+  background-color: #fafafa;
+  ::ng-deep {
+    .mat-list-item-content {
+      font-weight: bold;
+    }
+  }
+}
+.nav-item {
+  font-weight: bold;
+  &--active {
+    box-sizing: border-box;
+    border-bottom: 2px solid black;
+  }
+  &__child {
+    ::ng-deep {
+      .mat-list-item-content {
+        padding-left: 32px !important;
+      }
+    }
+  }
+}
+
+.panel-title {
+  font-size: 14px;
+  font-weight: bold;
+}
+
+.my-fab {
+  margin: 0 auto;
+  transition: none !important;
+  box-shadow: none !important;
+  width: 25px;
+  height: 25px;
+  line-height: 25px;
+
+  &::ng-deep .mat-button-wrapper{
+    line-height: 25px;
+    padding: 0;
+  }
 }
