--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -5,13 +5,13 @@
   </h5>
   <div class="footer-right">
     <a href="https://www.facebook.com/FreeUni" target="_blank">
-      <img src="../../assets/images/fb-icon.png">
+      <img src="../../../assets/images/fb-icon.png">
     </a>
     <a href="https://twitter.com/BenduCampus?fbclid=IwAR3VFygygxXbRR7RHvJLS8glsOZ-jM7RAxT7peton8vuCrvhnWoMnEQAvsc" target="_blank">
-      <img src="../../assets/images/twitter.png">
+      <img src="../../../assets/images/twitter.png">
     </a>
     <a href="https://www.youtube.com/freeunimedia" target="_blank">
-      <img src="../../assets/images/youtube.png">
+      <img src="../../../assets/images/youtube.png">
     </a>
 
   </div>
