--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,5 +1,5 @@
 <header class="header">
-    <a href="/mainpage"><img src="../../assets/images/freeuni-transparent.png"></a>
+    <a href="/mainpage"><img src="../../../assets/images/freeuni-transparent.png"></a>
     <h1>
       Tavisufali universiteti
     </h1>
