--- a/src/app/components/login/login.component.css
+++ b/src/app/components/login/login.component.css
@@ -1,5 +1,5 @@
 .google-login-btn {
-  background-image: url('src/assets/google-logo.png');
+  background-image: url('../../../assets/google-logo.png');
   background-repeat: no-repeat;
   background-size: 20%;
   background-position: 10%;
