--- a/src/app/components/user-page/user-page.component.html
+++ b/src/app/components/user-page/user-page.component.html
@@ -7,7 +7,7 @@
               <mat-card-title>
                 პირადი ინფორმაცია
               </mat-card-title>
-              <img mat-card-image src="../../assets/images/my-image.jpeg">
+              <img mat-card-image src="../../../assets/images/my-image.jpeg">
               <mat-card-content>
                 <h3>სახელი: <span>{{  userInfo.firstName}}</span> </h3>
                 <h3>გვარი: <span>{{  userInfo.lastName}}</span> </h3>
