--- a/src/app/components/admin-page/admin-page.component.html
+++ b/src/app/components/admin-page/admin-page.component.html
@@ -72,6 +72,15 @@
               </td>
             </ng-container>
 
+            <ng-container matColumnDef="delete">
+              <th mat-header-cell *matHeaderCellDef> წაშლა </th>
+              <td mat-cell *matCellDef="let element">
+                <button mat-mini-fab class="my-fab" (click)="deleteRubric(element)">
+                  <mat-icon>delete</mat-icon>
+                </button>
+              </td>
+            </ng-container>
+
             <tr mat-header-row *matHeaderRowDef="rubricDisplayedColumns"></tr>
             <tr mat-row *matRowDef="let row; columns: rubricDisplayedColumns;"></tr>
           </table>
