admin panel: all settings done (url changes needed)

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <app-header></app-header>
-<div>
+<div class="content">
   <router-outlet></router-outlet>
 </div>
+<div class="push"></div>
 <app-footer></app-footer>
