--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -9,6 +9,7 @@ $background-color: #ffc87c;
   padding: 10px;
   background-color: $background-color;
   display: table;
+  z-index: 5;
 }
 
 .footer h5 {
