--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,4 +1,9 @@
-div {
-  padding-right: 10px;
-  padding-left: 10px;
+content {
+  padding: 20px;
+  min-height: 100%;
+  margin: 0 auto -50px;
+}
+
+.push {
+  height: 10px;
 }
