--- a/src/app/components/admin-page/admin-page.component.html
+++ b/src/app/components/admin-page/admin-page.component.html
@@ -40,17 +40,17 @@
     </div>
   </mat-tab>
   <mat-tab label="პარამეტრები">
-    <mat-accordion>
-      <mat-expansion-panel (opened)="genresOpenState = true"
-                           (closed)="genresOpenState = false">
+    <div>
+      <mat-expansion-panel [expanded]="genresOpenState" (click)="genresOpenState = !genresOpenState" >
         <mat-expansion-panel-header>
           <mat-panel-title class="panel-title">
             საგნობრივი რუბრიკის დამატება / რედაქტირება
-            <button mat-mini-fab class="my-fab" (click)="addRubric()">
+            <button mat-mini-fab [class.small-add]="true" class="my-fab" (click)="addRubric()">
               <mat-icon>add</mat-icon>
             </button>
           </mat-panel-title>
         </mat-expansion-panel-header>
+
         <div class="mat-elevation-z8">
           <table mat-table [dataSource]="rubricsDataSource">
             <ng-container matColumnDef="id">
@@ -89,6 +89,241 @@
         </div>
       </mat-expansion-panel>
       <mat-divider></mat-divider>
-    </mat-accordion>
+      <mat-expansion-panel [expanded]="collectionOpenState"  (click)="collectionOpenState = !collectionOpenState">
+        <mat-expansion-panel-header>
+          <mat-panel-title class="panel-title">
+            ფონდი / კოლექციის დამატება / რედაქტირება
+            <button mat-mini-fab [class.small-add]="true" class="my-fab" (click)="addCollection()">
+              <mat-icon>add</mat-icon>
+            </button>
+          </mat-panel-title>
+        </mat-expansion-panel-header>
+        <div class="mat-elevation-z8">
+          <table mat-table [dataSource]="collectionsDataSource">
+            <ng-container matColumnDef="id">
+              <th mat-header-cell *matHeaderCellDef> აიდი </th>
+              <td mat-cell *matCellDef="let element"> {{element.id ? element.id : '' }} </td>
+            </ng-container>
+
+            <ng-container matColumnDef="name">
+              <th mat-header-cell *matHeaderCellDef> დასახელება </th>
+              <td mat-cell *matCellDef="let element"> {{element.name ? element.name : ''}} </td>
+            </ng-container>
+
+            <ng-container matColumnDef="actions">
+              <th mat-header-cell *matHeaderCellDef> რედაქტირება </th>
+              <td mat-cell *matCellDef="let element">
+                <button mat-mini-fab class="my-fab" (click)="editCollection(element)">
+                  <mat-icon>edit</mat-icon>
+                </button>
+              </td>
+            </ng-container>
+
+            <ng-container matColumnDef="delete">
+              <th mat-header-cell *matHeaderCellDef> წაშლა </th>
+              <td mat-cell *matCellDef="let element">
+                <button mat-mini-fab class="my-fab" (click)="deleteCollection(element)">
+                  <mat-icon>delete</mat-icon>
+                </button>
+              </td>
+            </ng-container>
+
+            <tr mat-header-row *matHeaderRowDef="rubricDisplayedColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: rubricDisplayedColumns;"></tr>
+          </table>
+
+          <mat-paginator [length]="rubricsDataSource.data.length" [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
+        </div>
+      </mat-expansion-panel>
+      <mat-divider></mat-divider>
+      <mat-expansion-panel [expanded]="formOpenState" (click)="formOpenState = !formOpenState">
+        <mat-expansion-panel-header>
+          <mat-panel-title class="panel-title">
+            მასალის სახის დამატება / რედაქტირება
+            <button mat-mini-fab [class.small-add]="true" class="my-fab" (click)="addForm()">
+              <mat-icon>add</mat-icon>
+            </button>
+          </mat-panel-title>
+        </mat-expansion-panel-header>
+        <div class="mat-elevation-z8">
+          <table mat-table [dataSource]="formsDataSource">
+            <ng-container matColumnDef="id">
+              <th mat-header-cell *matHeaderCellDef> აიდი </th>
+              <td mat-cell *matCellDef="let element"> {{element.id ? element.id : '' }} </td>
+            </ng-container>
+
+            <ng-container matColumnDef="name">
+              <th mat-header-cell *matHeaderCellDef> დასახელება </th>
+              <td mat-cell *matCellDef="let element"> {{element.name ? element.name : ''}} </td>
+            </ng-container>
+
+            <ng-container matColumnDef="actions">
+              <th mat-header-cell *matHeaderCellDef> რედაქტირება </th>
+              <td mat-cell *matCellDef="let element">
+                <button mat-mini-fab class="my-fab" (click)="editForm(element)">
+                  <mat-icon>edit</mat-icon>
+                </button>
+              </td>
+            </ng-container>
+
+            <ng-container matColumnDef="delete">
+              <th mat-header-cell *matHeaderCellDef> წაშლა </th>
+              <td mat-cell *matCellDef="let element">
+                <button mat-mini-fab class="my-fab" (click)="deleteForm(element)">
+                  <mat-icon>delete</mat-icon>
+                </button>
+              </td>
+            </ng-container>
+
+            <tr mat-header-row *matHeaderRowDef="rubricDisplayedColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: rubricDisplayedColumns;"></tr>
+          </table>
+
+          <mat-paginator [length]="formsDataSource.data.length" [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
+        </div>
+      </mat-expansion-panel>
+      <mat-divider></mat-divider>
+      <mat-expansion-panel [expanded]="typeOpenState" (click)="typeOpenState = !typeOpenState">
+        <mat-expansion-panel-header>
+          <mat-panel-title class="panel-title">
+            მასალის ტიპის დამატება / რედაქტირება
+            <button mat-mini-fab [class.small-add]="true" class="my-fab" (click)="addType()">
+              <mat-icon>add</mat-icon>
+            </button>
+          </mat-panel-title>
+        </mat-expansion-panel-header>
+        <div class="mat-elevation-z8">
+          <table mat-table [dataSource]="typesDataSource">
+            <ng-container matColumnDef="id">
+              <th mat-header-cell *matHeaderCellDef> აიდი </th>
+              <td mat-cell *matCellDef="let element"> {{element.id ? element.id : '' }} </td>
+            </ng-container>
+
+            <ng-container matColumnDef="name">
+              <th mat-header-cell *matHeaderCellDef> დასახელება </th>
+              <td mat-cell *matCellDef="let element"> {{element.name ? element.name : ''}} </td>
+            </ng-container>
+
+            <ng-container matColumnDef="actions">
+              <th mat-header-cell *matHeaderCellDef> რედაქტირება </th>
+              <td mat-cell *matCellDef="let element">
+                <button mat-mini-fab class="my-fab" (click)="editType(element)">
+                  <mat-icon>edit</mat-icon>
+                </button>
+              </td>
+            </ng-container>
+
+            <ng-container matColumnDef="delete">
+              <th mat-header-cell *matHeaderCellDef> წაშლა </th>
+              <td mat-cell *matCellDef="let element">
+                <button mat-mini-fab class="my-fab" (click)="deleteType(element)">
+                  <mat-icon>delete</mat-icon>
+                </button>
+              </td>
+            </ng-container>
+
+            <tr mat-header-row *matHeaderRowDef="rubricDisplayedColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: rubricDisplayedColumns;"></tr>
+          </table>
+
+          <mat-paginator [length]="typesDataSource.data.length" [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
+        </div>
+      </mat-expansion-panel>
+      <mat-divider></mat-divider>
+      <mat-expansion-panel [expanded]="languageOpenState" (click)="languageOpenState = !languageOpenState">
+        <mat-expansion-panel-header>
+          <mat-panel-title class="panel-title">
+            მასალის ენის დამატება / რედაქტირება
+            <button mat-mini-fab class="my-fab" [class.small-add]="true" (click)="addLanguage()">
+              <mat-icon>add</mat-icon>
+            </button>
+          </mat-panel-title>
+        </mat-expansion-panel-header>
+        <div class="mat-elevation-z8">
+          <table mat-table [dataSource]="languagesDataSource">
+            <ng-container matColumnDef="id">
+              <th mat-header-cell *matHeaderCellDef> აიდი </th>
+              <td mat-cell *matCellDef="let element"> {{element.id ? element.id : '' }} </td>
+            </ng-container>
+
+            <ng-container matColumnDef="name">
+              <th mat-header-cell *matHeaderCellDef> დასახელება </th>
+              <td mat-cell *matCellDef="let element"> {{element.name ? element.name : ''}} </td>
+            </ng-container>
+
+            <ng-container matColumnDef="actions">
+              <th mat-header-cell *matHeaderCellDef> რედაქტირება </th>
+              <td mat-cell *matCellDef="let element">
+                <button mat-mini-fab class="my-fab" (click)="editLanguage(element)">
+                  <mat-icon>edit</mat-icon>
+                </button>
+              </td>
+            </ng-container>
+
+            <ng-container matColumnDef="delete">
+              <th mat-header-cell *matHeaderCellDef> წაშლა </th>
+              <td mat-cell *matCellDef="let element">
+                <button mat-mini-fab class="my-fab" (click)="deleteLanguage(element)">
+                  <mat-icon>delete</mat-icon>
+                </button>
+              </td>
+            </ng-container>
+
+            <tr mat-header-row *matHeaderRowDef="rubricDisplayedColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: rubricDisplayedColumns;"></tr>
+          </table>
+
+          <mat-paginator [length]="languagesDataSource.data.length" [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
+        </div>
+      </mat-expansion-panel>
+      <mat-divider></mat-divider>
+      <mat-expansion-panel [expanded]="publisherOpenState" (click)="publisherOpenState = !publisherOpenState">
+        <mat-expansion-panel-header>
+          <mat-panel-title class="panel-title">
+            გამომცემლის დამატება / რედაქტირება
+            <button mat-mini-fab class="my-fab" [class.small-add]="true" (click)="addPublisher()">
+              <mat-icon>add</mat-icon>
+            </button>
+          </mat-panel-title>
+        </mat-expansion-panel-header>
+        <div class="mat-elevation-z8">
+          <table mat-table [dataSource]="publishersDataSource">
+            <ng-container matColumnDef="id">
+              <th mat-header-cell *matHeaderCellDef> აიდი </th>
+              <td mat-cell *matCellDef="let element"> {{element.id ? element.id : '' }} </td>
+            </ng-container>
+
+            <ng-container matColumnDef="name">
+              <th mat-header-cell *matHeaderCellDef> დასახელება </th>
+              <td mat-cell *matCellDef="let element"> {{element.name ? element.name : ''}} </td>
+            </ng-container>
+
+            <ng-container matColumnDef="actions">
+              <th mat-header-cell *matHeaderCellDef> რედაქტირება </th>
+              <td mat-cell *matCellDef="let element">
+                <button mat-mini-fab class="my-fab" (click)="editPublisher(element)">
+                  <mat-icon>edit</mat-icon>
+                </button>
+              </td>
+            </ng-container>
+
+            <ng-container matColumnDef="delete">
+              <th mat-header-cell *matHeaderCellDef> წაშლა </th>
+              <td mat-cell *matCellDef="let element">
+                <button mat-mini-fab class="my-fab" (click)="deletePublisher(element)">
+                  <mat-icon>delete</mat-icon>
+                </button>
+              </td>
+            </ng-container>
+
+            <tr mat-header-row *matHeaderRowDef="rubricDisplayedColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: rubricDisplayedColumns;"></tr>
+          </table>
+
+          <mat-paginator [length]="publishersDataSource.data.length" [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
+        </div>
+      </mat-expansion-panel>
+      <mat-divider></mat-divider>
+    </div>
   </mat-tab>
 </mat-tab-group>
