--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -4,7 +4,8 @@
       Tavisufali universiteti
     </h1>
     <div class="header-right">
-      <a class="navigation" href="/mainpage">mTavari gverdi</a>
+      <a *ngIf="user$ | async" class="navigation" href="/usermainpage">mTavari gverdi</a>
+      <a *ngIf="admin$ | async" class="navigation" href="/adminmainpage">mTavari gverdi</a>
       <a *ngIf="user$ | async" class="navigation" href="/userpage">Cemi gverdi</a>
       <a *ngIf="admin$ | async" class="navigation" href="/adminpage">adminis gverdi</a>
     </div>
