--- a/src/app/components/main-page-admin/main-page-admin.component.html
+++ b/src/app/components/main-page-admin/main-page-admin.component.html
@@ -1,3 +1,4 @@
+
 <div class="mat-elevation-z8">
   <table mat-table [dataSource]="booksDatasource">
     <ng-container matColumnDef="id">
@@ -48,6 +49,28 @@
     <ng-container matColumnDef="language">
       <th mat-header-cell *matHeaderCellDef> ენა </th>
       <td mat-cell *matCellDef="let element"> {{element.language ? element.language.name : ''}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="actions">
+      <th mat-header-cell  *matHeaderCellDef>
+        <div class="d-flex ml-12 child-ml-12">
+          <button  mat-mini-fab type="button" [matTooltip]="'დამატება'" (click)="createBook()">
+            <mat-icon>add</mat-icon>
+          </button>
+        </div>
+      </th>
+
+      <td mat-cell *matCellDef="let element">
+        <div class="d-flex ml-12 child-ml-12">
+          <button  mat-mini-fab class="my-fab" type="button" [matTooltip]="'რედაქტირება'" (click)="editBook(element)">
+            <mat-icon>edit</mat-icon>
+          </button>
+          <button  mat-mini-fab class="my-fab" type="button" [matTooltip]="'წაშლა'" (click)="deleteBook(element)">
+            <mat-icon>delete</mat-icon>
+          </button>
+        </div>
+      </td>
+
     </ng-container>
     <tr mat-header-row *matHeaderRowDef="displayColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayColumns;"></tr>
