--- a/src/app/components/main-page-admin/main-page-admin.component.scss
+++ b/src/app/components/main-page-admin/main-page-admin.component.scss
@@ -5,3 +5,31 @@ div {
 table {
   width: 100%;
 }
+
+
+mat-icon {
+  color: #030303;
+}
+
+.mat-flat-button .mat-accent, .mat-raised-button.mat-accent, .mat-fab.mat-accent, .mat-mini-fab.mat-accent {
+  background-color: #ffc87c;
+}
+
+.my-fab {
+  margin: 0 auto;
+  transition: none !important;
+  box-shadow: none !important;
+  width: 25px;
+  height: 25px;
+  line-height: 25px;
+
+  &::ng-deep .mat-button-wrapper{
+    line-height: 25px;
+    padding: 0;
+  }
+  .mat-icon {
+    font-size: 16px;
+    line-height: 25px;
+  }
+}
+
