add book with book copies almost done :)

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,4 +3,7 @@
   <router-outlet></router-outlet>
 </div>
 <div class="push"></div>
-<app-footer></app-footer>
+<footer>
+  <app-footer></app-footer>
+</footer>
+
