--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,3 +1,4 @@
+<footer>
 <div class="footer">
   <h5>
     kaxa benduqiZis sauniversiteto kampusi, Tbilisi, aRmaSeneblis xeivani # 240
@@ -16,3 +17,4 @@
 
   </div>
 </div>
+</footer>
