--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,9 +1,10 @@
-content {
-  padding: 20px;
-  min-height: 100%;
+.content {
+  padding: 10px;
+  min-height: 100%!important;
   margin: 0 auto -50px;
 }
 
 .push {
   height: 70px;
 }
+
