--- a/src/app/components/main-page-admin/view-book-page/view-book-page.component.scss
+++ b/src/app/components/main-page-admin/view-book-page/view-book-page.component.scss
@@ -6,3 +6,13 @@
 .mat-flat-button, .mat-raised-button, .mat-fab, .mat-mini-fab {
   background-color: #ffc87c;
 }
+
+
+.cancelBtn {
+  //position: absolute;
+  //bottom: 10px;
+}
+
+:host ::ng-deep.mat-paginator .mat-form-field-underline {
+  display: none;
+}
