--- a/src/app/components/admin-page/admin-page.component.html
+++ b/src/app/components/admin-page/admin-page.component.html
@@ -1,4 +1,58 @@
 <mat-tab-group>
+  <mat-tab label="მკითხველები">
+    <div class="mat-elevation-z8">
+    <table mat-table [dataSource]="studentsDataSource">
+      <ng-container matColumnDef="firstName">
+        <th mat-header-cell *matHeaderCellDef> სახელი </th>
+        <td mat-cell *matCellDef="let element"> {{element.firstName ? element.firstName : '' }} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="lastName">
+        <th mat-header-cell *matHeaderCellDef> გვარი </th>
+        <td mat-cell *matCellDef="let element"> {{element.lastName ? element.lastName : ''}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="personalNo">
+        <th mat-header-cell *matHeaderCellDef> პირადი ნომერი </th>
+        <td mat-cell *matCellDef="let element"> {{element.personalNo ? element.personalNo : ''}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="email">
+        <th mat-header-cell *matHeaderCellDef> მეილი </th>
+        <td mat-cell *matCellDef="let element"> {{element.email.trim() ? element.email.trim() : ''}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="phoneNumber">
+        <th mat-header-cell *matHeaderCellDef> ტელეფონის ნომერი </th>
+        <td mat-cell *matCellDef="let element"> {{element.phoneNum ? element.phoneNum : ''}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="createDate">
+        <th mat-header-cell *matHeaderCellDef> შექმნის თარიღი </th>
+        <td mat-cell *matCellDef="let element"> {{element.createDate ? element.createDate : ''}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="actions">
+        <th mat-header-cell *matHeaderCellDef>
+          <div class="d-flex ml-12 child-ml-12">
+            <button  mat-mini-fab type="button" [matTooltip]="'დამატება'" (click)="addReader()">
+              <mat-icon>add</mat-icon>
+            </button>
+          </div>
+        </th>
+        <td mat-cell *matCellDef="let element">
+          <button  mat-mini-fab class="my-fab" type="button" [matTooltip]="'წაშლა'" (click)="deleteReader(element)">
+            <mat-icon>delete</mat-icon>
+          </button>
+        </td>
+      </ng-container>
+
+      <tr mat-header-row *matHeaderRowDef="readersDisplayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: readersDisplayedColumns;"></tr>
+    </table>
+    <mat-paginator #readersPagination="matPaginator" [length]="studentsDataSource.data.length" [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
+    </div>
+  </mat-tab>
   <mat-tab label="მომხმარებლები">
     <div class="add-button">
       <button class="add-btn" mat-fab aria-label="ახალი ადმინ მომხმარებლის შექმნა" (click)="createNewUser()">
@@ -35,7 +89,7 @@
         <tr mat-header-row *matHeaderRowDef="usersDisplayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: usersDisplayedColumns;"></tr>
       </table>
-      <mat-paginator [length]="usersDataSource.data.length" [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
+      <mat-paginator #usersPagination="matPaginator" [length]="usersDataSource.data.length" [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
     </div>
   </mat-tab>
   <mat-tab label="პარამეტრები">
@@ -84,7 +138,7 @@
             <tr mat-row *matRowDef="let row; columns: rubricDisplayedColumns;"></tr>
           </table>
 
-          <mat-paginator [length]="rubricsDataSource.data.length" [pageSizeOptions]="[5, 10, 20]" (click)="genresOpenState = !genresOpenState" showFirstLastButtons></mat-paginator>
+          <mat-paginator #rubricsPagination="matPaginator" [length]="rubricsDataSource.data.length" [pageSize]="5" [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
         </div>
       </mat-expansion-panel>
       <mat-divider></mat-divider>
@@ -132,7 +186,7 @@
             <tr mat-row *matRowDef="let row; columns: rubricDisplayedColumns;"></tr>
           </table>
 
-          <mat-paginator [length]="collectionsDataSource.data.length" [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons aria-label="Select page"></mat-paginator>
+          <mat-paginator #collectionPagination="matPaginator" [length]="collectionsDataSource.data.length" [pageSize]="5" [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
         </div>
       </mat-expansion-panel>
       <mat-divider></mat-divider>
@@ -179,7 +233,7 @@
             <tr mat-row *matRowDef="let row; columns: rubricDisplayedColumns;"></tr>
           </table>
 
-          <mat-paginator [length]="formsDataSource.data.length" [pageSizeOptions]="[5, 10, 20]" (click)="formOpenState" showFirstLastButtons></mat-paginator>
+          <mat-paginator #formsPagination="matPaginator" [length]="formsDataSource.data.length" [pageSize]="5" [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
         </div>
       </mat-expansion-panel>
       <mat-divider></mat-divider>
@@ -226,7 +280,7 @@
             <tr mat-row *matRowDef="let row; columns: rubricDisplayedColumns;"></tr>
           </table>
 
-          <mat-paginator [length]="typesDataSource.data.length" [pageSizeOptions]="[5, 10, 20]" (click)="typeOpenState = !typeOpenState" showFirstLastButtons></mat-paginator>
+          <mat-paginator #typesPagination="matPaginator" [length]="typesDataSource.data.length" [pageSize]="5" [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
         </div>
       </mat-expansion-panel>
       <mat-divider></mat-divider>
@@ -273,7 +327,7 @@
             <tr mat-row *matRowDef="let row; columns: rubricDisplayedColumns;"></tr>
           </table>
 
-          <mat-paginator [length]="languagesDataSource.data.length" [pageSizeOptions]="[5, 10, 20]" (click)="languageOpenState = !languageOpenState" showFirstLastButtons></mat-paginator>
+          <mat-paginator #languagesPagination="matPaginator" [length]="languagesDataSource.data.length" [pageSize]="5" [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
         </div>
       </mat-expansion-panel>
       <mat-divider></mat-divider>
@@ -320,7 +374,7 @@
             <tr mat-row *matRowDef="let row; columns: rubricDisplayedColumns;"></tr>
           </table>
 
-          <mat-paginator [length]="publishersDataSource.data.length" [pageSizeOptions]="[5, 10, 20]" (click)="publisherOpenState = !publisherOpenState" showFirstLastButtons></mat-paginator>
+          <mat-paginator #publishersPagination="matPaginator" [length]="publishersDataSource.data.length" [pageSize]="5" [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
         </div>
       </mat-expansion-panel>
       <mat-divider></mat-divider>
