--- a/src/app/components/admin-page/create-admin-dialog/create-admin-dialog.component.html
+++ b/src/app/components/admin-page/create-admin-dialog/create-admin-dialog.component.html
@@ -34,6 +34,18 @@
       <p> მეილი სავალდებულოა</p>
     </div>
     <mat-form-field appearance="fill">
+      <mat-label>მობილური ნომერი</mat-label>
+      <input type="text" matInput formControlName="phoneNumber"/>
+    </mat-form-field>
+    <mat-form-field *ngIf="!isAdmin" appearance="fill">
+      <mat-label>მკითხველის ტიპი</mat-label>
+      <mat-select formControlName="readerType">
+        <mat-option value="student">სტუდენტი</mat-option>
+        <mat-option value="student">ლექტორი</mat-option>
+        <mat-option value="student">სხვა</mat-option>
+      </mat-select>
+    </mat-form-field>
+    <mat-form-field *ngIf="isAdmin" appearance="fill">
       <mat-label>პაროლი</mat-label>
       <input [type]="hidePassword ? 'password' : 'text'" matInput formControlName="password" required/>
       <button mat-icon-button matSuffix (click)="hidePassword = !hidePassword" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hidePassword">
@@ -44,7 +56,7 @@
          class="alert alert-danger" style="font-size: 0.8rem;">
       <p> პაროლი სავალდებულოა</p>
     </div>
-    <mat-form-field appearance="fill">
+    <mat-form-field *ngIf="isAdmin" appearance="fill">
       <mat-label>გაიმეორეთ პაროლი</mat-label>
       <input [type]="hideRepPassword ? 'password' : 'text'" matInput formControlName="repeatPassword" required/>
       <button mat-icon-button matSuffix (click)="hideRepPassword = !hideRepPassword" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hideRepPassword">
