--- a/src/app/components/main-page-admin/main-page-admin.component.scss
+++ b/src/app/components/main-page-admin/main-page-admin.component.scss
@@ -49,9 +49,9 @@ tr {
   height: 20px !important;
 }
 
-::ng-deep .mat-form-field-wrapper {
-  padding-bottom: 0px !important;
-}
+//::ng-deep .mat-form-field-wrapper {
+//  padding-bottom: 0px !important;
+//}
 
 .vertically-centered {
   display: flex;
@@ -69,6 +69,7 @@ tr {
 
 .searchBtn {
   float: right;
+  margin-left: 8px;
 }
 
 :host ::ng-deep.mat-paginator .mat-form-field-underline {
