--- a/src/app/components/main-page-admin/booking-page/booking-page.component.html
+++ b/src/app/components/main-page-admin/booking-page/booking-page.component.html
@@ -1,9 +1,9 @@
 <form [formGroup]="bookingForm" (ngSubmit)="onSubmit()">
     <mat-form-field appearance="outline" style="width: 100%">
       <mat-label>აირჩიეთ თარიღები</mat-label>
-      <mat-date-range-input [rangePicker]="picker">
-        <input matStartDate placeholder="დასაწყისი" formControlName="createDateFrom">
-        <input matEndDate placeholder="დასასრული" formControlName="createDateTo">
+      <mat-date-range-input [min]="minDate" [max]="maxDate"  [rangePicker]="picker">
+        <input  matStartDate  placeholder="დასაწყისი" formControlName="dateFrom">
+        <input matEndDate placeholder="დასასრული" formControlName="dateTo">
       </mat-date-range-input>
       <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
       <mat-date-range-picker #picker></mat-date-range-picker>
