--- a/src/app/components/main-page-admin/view-book-page/view-book-page.component.html
+++ b/src/app/components/main-page-admin/view-book-page/view-book-page.component.html
@@ -73,7 +73,7 @@
           </div>
           <div class="col-sm">
             <mat-form-field style="width: 100%;" appearance="outline">
-              <mat-label>გამოცემა</mat-label>
+              <mat-label>გამომცემლობა</mat-label>
               <input type='text' matInput value="{{data.publisher ? data.publisher.name : 'არ არის მითითებული'}}" [readonly]="true">
             </mat-form-field>
           </div>
