--- a/src/app/components/main-page-admin/main-page-admin.component.html
+++ b/src/app/components/main-page-admin/main-page-admin.component.html
@@ -72,7 +72,7 @@
     <div class="col">
       <mat-form-field appearance="outline" style="padding-bottom: 2px!important;">
         <mat-label>გამომცემლობა</mat-label>
-        <mat-select formControlName="bookStatus">
+        <mat-select formControlName="publisherId">
           <mat-option></mat-option>
           <mat-option *ngFor="let publisher of publishers" [value]="publisher.id">
             {{publisher.name}}
